service.yml
apiVersion: v1
kind: Service
metadata:
  name: wanderift-service
spec:
  ports:
    - port: 80
      targetPort: 8000
      name: http
  selector:
    app: wanderift
  type: NodePort
